syntax = "proto3";
option csharp_namespace = "Sentry.AspNetCore.Samples.Grpc";

import "google/protobuf/empty.proto";

service Games {
  rpc FetchNextPhaseData(google.protobuf.Empty) returns (NextPhaseResponse);
}

message NextPhaseResponse {
  int32 dungeonsIds = 1;
  int32 userMana = 2;
}
